@@ -1,3 +1,9 @@
+2009-01-26  Jon Nettleton <jon.nettleton@gmail.com>
+
+	* src/via_accel.c: (viaInitXAA), (viaExaCheckComposite):
+
+	a couple of small compatibility fixes for XAA and EXA.
+
 2009-01-17  Jon Nettleton  <jon.nettleton@gmail.com>
 
 	* libxvmc/viaLowLevel.c: (viaDMAInitTimeStamp):
